chore: simplify code - .get(0) to getFirst()